Prevent Overlay Covering Widget Contents

--- a/css/front-flex.less
+++ b/css/front-flex.less
@@ -64,6 +64,16 @@
 	z-index: -1;
 }
 
+.panel-has-overlay.so-panel {
+	.panel-widget-style > * {
+		position: relative;
+	}
+
+	.panel-background-overlay {
+		position: absolute;
+	}
+}
+
 .panel-layout.panel-is-rtl {
 	.panel-grid {
 		&.panel-no-style,
